--- a/মুলপাতা.html
+++ b/মুলপাতা.html
@@ -5,31 +5,104 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>বোখারী - সংক্ষিপ্ত</title>
+    <title>বোখারী শরীফ - সংক্ষিপ্ত</title>
     <link rel="shortcut icon" href="/ফেভিকন.png" type="image/png">
-    <link rel="stylesheet" href="/সুন্দর/মুলসুন্দর.css">
-    <link rel="stylesheet" href="/সুন্দর/বুটস্ট্রাপ.css">
-    <script src="/কাজ/মুলকাজ.js"></script>
-    <script src="/কাজ/বুটস্ট্রাপ.js"></script>
+    <link rel="stylesheet" href="/সুন্দরকাজ/মুলসুন্দর.css">
+    <script src="/সুন্দরকাজ/মুলকাজ.js"></script>
 </head>
 
 <body>
     <header>
-
+        <nav>
+            <a href="/মুলপাতা.html">বোখারী শরীফ - সংক্ষিপ্ত </a>
+        </nav>
     </header>
-    <main>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+    <main style="position: absolute;">
+        <section class="aaa">
+            <div class="aaa-a">
+                <div class="aaa-a-a">
+
+                    <a class="aaa-a-a-b" href="/খন্ডসমুহ/১/প্রথমখন্ড.html">প্রথম খন্ড</a>
+                </div>
+            </div>
+        </section>
+        <section class="aaa">
+            <div class="aaa-a">
+                <div class="aaa-a-a">
+
+                    <a class="aaa-a-a-b" href="/খন্ডসমুহ/২/দ্বিতীয়খন্ড.html">দ্বিতীয় খন্ড</a>
+                </div>
+            </div>
+        </section>
+        <section class="aaa">
+            <div class="aaa-a">
+                <div class="aaa-a-a">
+
+                    <a class="aaa-a-a-b" href="/খন্ডসমুহ/৩/তৃতীয়খন্ড.html">তৃতীয় খন্ড</a>
+                </div>
+            </div>
+        </section>
+        <section class="aaa">
+            <div class="aaa-a">
+                <div class="aaa-a-a">
+
+                    <a class="aaa-a-a-b" href="/খন্ডসমুহ/৪/চতুর্থখন্ড.html">চতুর্থ খন্ড</a>
+                </div>
+            </div>
+        </section>
+        <section class="aaa">
+            <div class="aaa-a">
+                <div class="aaa-a-a">
+
+                    <a class="aaa-a-a-b" href="/খন্ডসমুহ/৫/পঞ্চমখন্ড.html">পঞ্চম খন্ড</a>
+                </div>
+            </div>
+        </section>
+        <section class="aaa">
+            <div class="aaa-a">
+                <div class="aaa-a-a">
+
+                    <a class="aaa-a-a-b" href="/খন্ডসমুহ/৬/ষষ্টখন্ড.html">ষষ্ট খন্ড</a>
+                </div>
+            </div>
+        </section>
+        <section class="aaa">
+            <div class="aaa-a">
+                <div class="aaa-a-a">
+
+                    <a class="aaa-a-a-b" href="/খন্ডসমুহ/৭/সপ্তমখন্ড.html">সপ্তম খন্ড</a>
+                </div>
+            </div>
+        </section>
+        <section class="aaa">
+            <div class="aaa-a">
+                <div class="aaa-a-a">
+
+                    <a class="aaa-a-a-b" href="/খন্ডসমুহ/৮/অষ্টমখন্ড.html">অষ্টম খন্ড</a>
+                </div>
+            </div>
+        </section>
+        <section class="aaa">
+            <div class="aaa-a">
+                <div class="aaa-a-a">
+
+                    <a class="aaa-a-a-b" href="/খন্ডসমুহ/৯/নবমখন্ড.html">নবম খন্ড</a>
+                </div>
+            </div>
+        </section>
+        <section class="aaa">
+            <div class="aaa-a">
+                <div class="aaa-a-a">
+
+                    <a class="aaa-a-a-b" href="/খন্ডসমুহ/১০/দশমখন্ড.html">দশম খন্ড</a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <section></section>
         <section></section>
-        <section></section>
+        <section>copyright এস. এম. নাসিমুজ্জামান তাওহীদ</section>
     </footer>
 </body>
 
